--- a/movielens.ipynb
+++ b/movielens.ipynb
@@ -990,7 +990,9 @@
     "---\n",
     "## Embeddings\n",
     "\n",
-    "In this secion we're going to create a `nn.Module` for our embedding network. The main difference from the class provided in the original post is that this class is a bit more generic: it allows to create a network of arbirary depth, with or without dropouts. Also, the `forward` method accepts an additional `minmax` argument which is expected to be a tuple with minimum and maximum values of ratings from the dataset."
+    "In this secion we're going to create an `nn.Module` for our embedding network. The main difference from the class provided in the original post is that this class is a bit more generic: it allows to create a network of arbirary depth, with or without dropouts. Also, the `forward` method accepts an additional `minmax` argument which is expected to be a tuple with minimum and maximum values of ratings from the dataset to normalize the predicted value into specific range.\n",
+    "\n",
+    "Note that to create a group of hidden layers we use a [generator](https://wiki.python.org/moin/Generators) function `gen_layers` that yields linear and dropout layers depending on values from `hidden` and `dropouts` arrays. Also note that we use the `nn.Sequence` class to group hidden layers into a single module."
    ]
   },
   {
@@ -1036,6 +1038,13 @@
     "        n_last = hidden[-1]\n",
     "        \n",
     "        def gen_layers(n_in):\n",
+    "            \"\"\"\n",
+    "            A generator that yields a sequence of hidden layers and \n",
+    "            their activations/dropouts.\n",
+    "            \n",
+    "            Note that the function captures `hidden` and `dropouts` \n",
+    "            values from the outer scope.\n",
+    "            \"\"\"\n",
     "            nonlocal hidden, dropouts\n",
     "            assert len(dropouts) <= len(hidden)\n",
     "            \n",
@@ -1064,6 +1073,9 @@
     "        return out\n",
     "    \n",
     "    def _init(self):\n",
+    "        \"\"\"\n",
+    "        Setup embeddings and hidden layers with reasonable initial values.\n",
+    "        \"\"\"\n",
     "        \n",
     "        def init(m):\n",
     "            if type(m) == nn.Linear:\n",
@@ -1170,7 +1182,11 @@
     "---\n",
     "## Cyclical Learning Rate (CLR)\n",
     "\n",
-    "One of the `fastai` library features is the cyclical learning rate scheduler. We can implement something similar inheriting the `_LRScheduler` class from the `torch` library. Following the [original paper's](https://arxiv.org/abs/1506.01186) pseudocode, this [CLR Keras callback implementation](https://github.com/bckenstler/CLR), and making a couple of adjustments to support [cosine annealing](https://pytorch.org/docs/stable/optim.html#torch.optim.lr_scheduler.CosineAnnealingLR) with restarts, let's create our own CLR scheduler."
+    "One of the `fastai` library features is the cyclical learning rate scheduler. We can implement something similar inheriting the `_LRScheduler` class from the `torch` library. Following the [original paper's](https://arxiv.org/abs/1506.01186) pseudocode, this [CLR Keras callback implementation](https://github.com/bckenstler/CLR), and making a couple of adjustments to support [cosine annealing](https://pytorch.org/docs/stable/optim.html#torch.optim.lr_scheduler.CosineAnnealingLR) with restarts, let's create our own CLR scheduler.\n",
+    "\n",
+    "The implementation of this idea is quite simple. The [base PyTorch scheduler class](https://pytorch.org/docs/stable/_modules/torch/optim/lr_scheduler.html) has the `get_lr()` method that is invoked each time when we call the `step()` method. The method should return a list of learning rates depending on the current training epoch. In our case, we have the same learning rate for all of the layers, and therefore, we return a list with a single value. \n",
+    "\n",
+    "The next cell defines a `CyclicLR` class that expectes a single callback function. This function should accept the current training epoch and the base value of learning rate, and return a new learning rate value."
    ]
   },
   {
@@ -1182,7 +1198,6 @@
     "class CyclicLR(_LRScheduler):\n",
     "    \n",
     "    def __init__(self, optimizer, schedule, last_epoch=-1):\n",
-    "\n",
     "        assert callable(schedule)\n",
     "        self.schedule = schedule\n",
     "        super().__init__(optimizer, last_epoch)\n",
@@ -1195,7 +1210,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The scheduler is very similar to [LambdaLR](https://pytorch.org/docs/stable/optim.html#torch.optim.lr_scheduler.LambdaLR) one but expects a bit different lambda function singautre. So now we need to define scheduling functions which accept current base learning rate and epoch, and return the new rate:"
+    "Our scheduler is very similar to [LambdaLR](https://pytorch.org/docs/stable/optim.html#torch.optim.lr_scheduler.LambdaLR) one but expects a bit different callback signature. \n",
+    "\n",
+    "So now we only need to define appropriate scheduling functions. We're createing a couple of functions that accept scheduling parameters and return a _new function_ with the appropriate signature:"
    ]
   },
   {
@@ -1245,7 +1262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To check the correctness of our implementation, let's create a couple of plots visualizing learning rates changes:"
+    "To understand how the created functions work, and to check the correctness of our implementation, let's create a couple of plots visualizing learning rates changes depending on the number of epoch:"
    ]
   },
   {
@@ -1405,7 +1422,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next cell is preparing and running the training loop with cyclical learning rate, validation and early stopping. We use `Adam` optimizer with cosine-annealing learnign rate. The rate is decreased on each batch during 2 epochs, and then is reset to the original value."
+    "The next cell is preparing and running the training loop with cyclical learning rate, validation and early stopping. We use `Adam` optimizer with cosine-annealing learnign rate. The rate is decreased on each batch during `2` epochs, and then is reset to the original value.\n",
+    "\n",
+    "Note that our loop has two phases. One of them is called `train`. During this phase, we update our network's weights and change the learning rate. The another one is called `val` and is used to check the model's performence. When the loss value decreases, we save model parameters to restore them later. If there is no improvements after `10` sequential training epochs, we exit from the loop."
    ]
   },
   {
@@ -1477,9 +1496,12 @@
     "            x_batch, y_batch = [b.to(device) for b in batch]\n",
     "            optimizer.zero_grad()\n",
     "        \n",
+    "            # compute gradients only during 'train' phase\n",
     "            with torch.set_grad_enabled(training):\n",
     "                outputs = net(x_batch[:, 1], x_batch[:, 0], minmax)\n",
     "                loss = criterion(outputs, y_batch)\n",
+    "                \n",
+    "                # don't update weights and rates when in 'val' phase\n",
     "                if training:\n",
     "                    scheduler.step()\n",
     "                    loss.backward()\n",
@@ -1490,6 +1512,8 @@
     "            \n",
     "        epoch_loss = running_loss / dataset_sizes[phase]\n",
     "        stats[phase] = epoch_loss\n",
+    "        \n",
+    "        # early stopping: save weights of the best model so far\n",
     "        if phase == 'val':\n",
     "            if epoch_loss < best_loss:\n",
     "                print('loss improvement on epoch: %d' % (epoch + 1))\n",
@@ -1513,7 +1537,7 @@
     "---\n",
     "## Metrics\n",
     "\n",
-    "To visualize training process and to check the correctness of the learning rate scheduling, let's create a couple of plots using collected stats:"
+    "To visualize the training process and to check the correctness of the learning rate scheduling, let's create a couple of plots using collected stats:"
    ]
   },
   {
@@ -1549,7 +1573,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we're going to restore the best trained weights and apply the model to the validation subset of the data:"
+    "As expected, the learning rate is updated in accordance with cosine annealing schedule."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The training process was terminated after _16 epochs_. Now we're going to restore the best weights saved during training, and apply the model to the validation subset of the data to see the final model's performance:"
    ]
   },
   {
@@ -1615,7 +1646,7 @@
     "---\n",
     "## Bonus: Embeddings Visualization\n",
     "\n",
-    "Finally, we can create a couple of visualizations to show how various movies are encoded in embeddings space. Again, we're repeting the approach shown in the original post and apply [Principal Components Analysis](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html) to reduce the dimentionality of embeddings and show some of them with bar plots."
+    "Finally, we can create a couple of visualizations to show how various movies are encoded in embeddings space. Again, we're repeting the approach shown in the original post and apply the [Principal Components Analysis](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html) to reduce the dimentionality of embeddings and show some of them with bar plots."
    ]
   },
   {
@@ -1625,6 +1656,13 @@
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading previously saved weights:"
    ]
   },
   {
@@ -1649,6 +1687,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating the mappings between original users's and movies's IDs, and new contiguous values:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
@@ -1659,6 +1704,13 @@
     "_, _, (user_id_map, movie_id_map) = create_dataset(ratings)\n",
     "embed_to_original = {v: k for k, v in movie_id_map.items()}\n",
     "popular_movies = ratings.groupby('movieId').movieId.count().sort_values(ascending=False).values[:1000]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reducing the dimensionality of movie embeddings vectors:"
    ]
   },
   {
@@ -1682,6 +1734,13 @@
     "pca = PCA(n_components=5)\n",
     "components = pca.fit(embed[popular_movies].T).components_\n",
     "components.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, creating a joined data frame with projected embeddings and movies they represent:"
    ]
   },
   {
