Tokenization and vocab

--- a/rnn/rnn_imdb.ipynb
+++ b/rnn/rnn_imdb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,8 +63,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset Preparation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tokenization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,39 +161,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TokenizerPool:\n",
+    "class SpacyTokenizer:\n",
+    "    \"\"\"A thin wrapper on top of Spacy tokenization tools.\"\"\"\n",
     "    \n",
-    "    def __init__(self, tokenizer_fn, rules=DEFAULT_RULES, special_cases=DEFAULT_SPECIAL_TOKENS):\n",
-    "        self.tokenizer_fn = tokenizer_fn\n",
-    "        self.rules = rules or []\n",
-    "        self.special_cases = special_cases or []\n",
+    "    def __init__(self, lang='en', rules=DEFAULT_RULES, special_cases=DEFAULT_SPECIAL_TOKENS):\n",
+    "        tokenizer = spacy.load(lang).tokenizer\n",
+    "        if special_cases:\n",
+    "            tokenizer.add_special_cases(special_cases)\n",
+    "        self.rules = rules\n",
+    "        self.tokenizer = tokenizer\n",
     "    \n",
-    "    def tokenize_text(self, sentenses, n_jobs=1):\n",
-    "        pass\n",
-    "    \n",
-    "    def _tokenize(self, ):\n",
-    "        tokenizer = self.tokenizer_fn()\n",
-    "            if self.special_cases:\n",
-    "                tokenizer.add_special_cases(self.special_cases)"
+    "    def tokenize(self, sentence):\n",
+    "        for rule in self.rules:\n",
+    "            rule(sentence)\n",
+    "        return [t for t in self.tokenizer(sentence)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def partition_by_core(arr):\n",
-    "    return split_into(arr, len(arr)//cpu_count() + 1)"
+    "def parallel_tokenization(texts):\n",
+    "    \n",
+    "    def tokenize(texts):\n",
+    "        tok = SpacyTokenizer()\n",
+    "        return [tok.tokenize(text) for text in texts]\n",
+    "            \n",
+    "    n_workers = cpu_count()\n",
+    "    parts = split_into(texts, len(texts)//n_workers + 1)\n",
+    "    with Pool(n_workers) as pool:\n",
+    "        results = pool.map(tokenize, parts)\n",
+    "    return sum(results, [])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,10 +215,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def create_spacy_tokenizer(lang='en'):\n",
-    "    return spacy.load(lang).tokenizer"
-   ]
+   "source": []
   }
  ],
  "metadata": {
