--- a/movielens.ipynb
+++ b/movielens.ipynb
@@ -239,7 +239,7 @@
    "outputs": [],
    "source": [
     "# pick one of the available folders\n",
-    "ratings, movies = read_data(download_path / 'ml-1m')"
+    "ratings, movies = read_data(download_path / 'ml-latest-small')"
    ]
   },
   {
